--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "nearest-color": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
